--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js"></script>
+    <link href="style.css" rel='stylesheet'>
 </head>
 <body>
-    
+  <div class='header'></div>
+  <div class='output'></div>
+  <div class='options'>
+    <button type="button" id='one'>Rock</button>
+    <button type="button" id='two'>Paper</button>
+    <button type="button" id='three'>Scissors</button>
+  </div>
+  <div class='footer'></div>
 </body>
 </html>
