removed user input validation because it now ties to buttons, also added running score

--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 </head>
 <body>
   <div class='header'></div>
-  <div class='output'>Winner:</div>
+  <div class='result-container'>
+    <div class='winner-container'>
+      <div class='winner-text'>Round Winner:</div>
+      <div class='winner'></div>
+    </div>
+    <div class='score-container'>
+      <div class='player-container'>
+        <div class='player-score-text'>Player:</div>
+        <div class='player-score'></div>
+      </div>
+      <div class='computer-container'>
+        <div class='computer-score-text'>Computer:</div>
+        <div class='computer-score'></div>
+      </div>
+    </div>
+  </div>
   <div class='options'>
     <button class='hand' type="button" id='rock'>Rock</button>
     <button class='hand' type="button" id='paper'>Paper</button>
