--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <title>Document</title>
     <script src="script.js" defer></script>
     <link href="style.css" rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class='header'></div>
+  <div class='header'>
+    <pre>
+                                  88                                                                                      88                                                       
+                                  88                                                                                      ""                                                       
+                                  88                                                                                                                                               
+8b,dPPYba,  ,adPPYba,   ,adPPYba, 88   ,d8  8b,dPPYba,  ,adPPYYba, 8b,dPPYba,   ,adPPYba, 8b,dPPYba, ,adPPYba,  ,adPPYba, 88 ,adPPYba, ,adPPYba,  ,adPPYba,  8b,dPPYba, ,adPPYba,  
+88P'   "Y8 a8"     "8a a8"     "" 88 ,a8"   88P'    "8a ""     `Y8 88P'    "8a a8P_____88 88P'   "Y8 I8[    "" a8"     "" 88 I8[    "" I8[    "" a8"     "8a 88P'   "Y8 I8[    ""  
+88         8b       d8 8b         8888[     88       d8 ,adPPPPP88 88       d8 8PP""""""" 88          `"Y8ba,  8b         88  `"Y8ba,   `"Y8ba,  8b       d8 88          `"Y8ba,   
+88         "8a,   ,a8" "8a,   ,aa 88`"Yba,  88b,   ,a8" 88,    ,88 88b,   ,a8" "8b,   ,aa 88         aa    ]8I "8a,   ,aa 88 aa    ]8I aa    ]8I "8a,   ,a8" 88         aa    ]8I  
+88          `"YbbdP"'   `"Ybbd8"' 88   `Y8a 88`YbbdP"'  `"8bbdP"Y8 88`YbbdP"'   `"Ybbd8"' 88         `"YbbdP"'  `"Ybbd8"' 88 `"YbbdP"' `"YbbdP"'  `"YbbdP"'  88         `"YbbdP"'  
+                                            88                     88                                                                                                              
+                                            88                     88                                                                                                              
+    </pre>
+  </div>
   <div class='result-container'>
     <div class='winner-container'>
       <div class='winner-text'>Round Winner:</div>
