styled and added text description to the footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
   <div class='result-container'>
     <div class='winner-container'>
-      <div class='winner-text'>Round Winner:</div>
+      <div class='winner-text'>Round Result:</div>
       <div class='winner'></div>
     </div>
     <div class='score-container'>
@@ -46,6 +46,11 @@
     <button class='hand' type="button" id='paper'>Paper</button>
     <button class='hand' type="button" id='scissors'>Scissors</button>
   </div>
-  <div class='footer'></div>
+  <div class='footer'>
+    <h2>Rules</h2>
+    <p>ROCK beats SCISSORS | SCISSORS beat PAPER | PAPER beats ROCK</p>
+    <p>Game lasts 5 rounds. To restart the game, just select a hand by pressing one of three buttons!
+    May Odin and RNJesus guide your hand!</p>
+  </div>
 </body>
 </html>
