Now draws are also shown on the score board

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
     </div>
     <div class='score-container'>
       <div class='player-container'>
-        <div class='player-score-text'>Player:</div>
-        <div class='player-score'></div>
+        <div class='player-score-text'>Player:  <span class='player-score'></span></div>
       </div>
       <div class='computer-container'>
-        <div class='computer-score-text'>Computer:</div>
-        <div class='computer-score'></div>
+        <div class='computer-score-text'>Computer:  <span class='computer-score'></span></div>
+      </div>
+      <div class='draw-container'>
+        <div class='draw-score-text'>Draws: <span class='draw-score'></span></div> 
       </div>
     </div>
   </div>
@@ -47,10 +48,9 @@
     <button class='hand' type="button" id='scissors'>Scissors</button>
   </div>
   <div class='footer'>
-    <h2>Rules</h2>
-    <p>ROCK beats SCISSORS | SCISSORS beat PAPER | PAPER beats ROCK</p>
-    <p>Game lasts 5 rounds. To restart the game, just select a hand by pressing one of three buttons!
-    May Odin and RNJesus guide your hand!</p>
+    <h3>ROCK beats SCISSORS | SCISSORS beats PAPER | PAPER beats ROCK</h3>
+    <h3>Game lasts 5 rounds. To restart the game, just select a hand by pressing one of three buttons!</h3>
+    <h3>May Odin and RNJesus guide your hand!</h3>
   </div>
 </body>
 </html>
